syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__structs__tests__it_matches_tuple.snap
---
source: syn-state-machine/src/common_tokens/structs.rs
expression: "crate::parse::<Struct<Infallible,\n        Ident>>(::quote::quote! {\n            struct Point < T > (T, T) where T : std :: ops :: Add < Other = T\n            > ;\n        })"
---
Ok(
    (
        Tuple(
            TupleStruct {
                id: Ident(
                    Point,
                ),
                params: Some(
                    GenericParams(
                        [
                            TypeParam(
                                [],
                                TypeParam {
                                    id: Ident(
                                        T,
                                    ),
                                    bounds: None,
                                    ty: None,
                                },
                            ),
                        ],
                    ),
                ),
                fields: InterlaceTrail(
                    [
                        TupleField {
                            attr: [],
                            vis: None,
                            ty: Ident(
                                T,
                            ),
                        },
                        TupleField {
                            attr: [],
                            vis: None,
                            ty: Ident(
                                T,
                            ),
                        },
                    ],
                    [
                        FPunct,
                    ],
                ),
                where_clause: Some(
                    WhereClause(
                        [
                            TypeBoundWhereClauseItem(
                                TypeBoundWhereClauseItem {
                                    for: None,
                                    ty: Ident(
                                        T,
                                    ),
                                    bounds: Some(
                                        TypeParamBounds(
                                            [
                                                TraitBound(
                                                    TraitBound {
                                                        q: false,
                                                        for: None,
                                                        ty: TypePath {
                                                            leading: false,
                                                            segments: [
                                                                Simple {
                                                                    id: Id(
                                                                        Ident(
                                                                            std,
                                                                        ),
                                                                    ),
                                                                },
                                                                Simple {
                                                                    id: Id(
                                                                        Ident(
                                                                            ops,
                                                                        ),
                                                                    ),
                                                                },
                                                                Generic {
                                                                    id: Id(
                                                                        Ident(
                                                                            Add,
                                                                        ),
                                                                    ),
                                                                    generic_args: GenericArgs(
                                                                        [
                                                                            ArgsBinding(
                                                                                GenericArgsBinding(
                                                                                    Ident(
                                                                                        Other,
                                                                                    ),
                                                                                    NoBounds(
                                                                                        TypePath(
                                                                                            TypePath {
                                                                                                leading: false,
                                                                                                segments: [
                                                                                                    Simple {
                                                                                                        id: Id(
                                                                                                            Ident(
                                                                                                                T,
                                                                                                            ),
                                                                                                        ),
                                                                                                    },
                                                                                                ],
                                                                                            },
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    },
                                                ),
                                            ],
                                        ),
                                    ),
                                },
                            ),
                        ],
                    ),
                ),
            },
        ),
        0,
    ),
)
