syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__structs__tests__it_matches_unit.snap
---
source: syn-state-machine/src/common_tokens/structs.rs
expression: "crate::parse::<Struct>(::quote::quote! { struct Unit ; })"
---
Ok(
    (
        Unit(
            UnitStruct(
                Ident(
                    Unit,
                ),
            ),
        ),
        0,
    ),
)
